fix(Modal): replace position relative with higher z-index to show the modal-panel

--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -35,7 +35,7 @@
 .modal-panel {
   width: 100%;
   border-radius: var(--sgds-border-radius-md);
-  position: relative;
+  z-index: 2; /* shift above overlay  */
   display: flex;
   flex-direction: column;
   gap: var(--sgds-gap-2-xl);
@@ -55,7 +55,6 @@
   flex-direction: column;
   gap: var(--sgds-gap-2-xl);
   min-height: 0;
-  position: relative;
 }
 
 .modal-header__close {
